adjusted headers and footers host layout to ensure correct overlapping header and footer positioning

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,9 +1,16 @@
 @use '../../styles/mixins' as *;
 @use '../../styles/fonts' as *;
 
+:host{
+    display: block;
+    position: relative;
+    z-index: 100;
+    margin-top: -210px;
+    width: 100dvw;
+}
+
 footer{
     @include dFlex(center, space-between);
-    width: 100dvw;
     padding: 50px 98px;
     font-family: Karla;
     font-size: 16px;
